--- a/distributor.html
+++ b/distributor.html
@@ -246,6 +246,16 @@ function info ()
 	var the = document.distributor;
     var info = the.info= {};
 
+	info['Basic'] = HERE(function () {/*
+   When cutting across a muscle, all the individual muscle "fibers" are seen.
+An idle muscle has "tonus" (a little bit of persistent contraction).
+Each fiber contracts and releases quickly (a twitch).  Many twitches make tonus.
+Twitching exhausts a fiber. It must sit idle for a time before twitching again.
+   When more/less fibers twitch, contraction increases/decreases.
+The nerve that drives twitches assigns one neuron to each fiber.
+The nervous system produces sequences of signals that do not exhaust fibers.
+	*/});
+
     info['Abstract'] = HERE(function () {/*
    A muscle fiber bundle model is shown in cross section (each fiber a square).
 A muscle fiber is a twitch unit which generates a shortening force.
